--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -16,14 +16,14 @@ Orchestration refers to the %(cite introduzione ragionata al mondo dei web serv,
 business process realized by the interaction of several services supervised by a main actor. Choreography, instead, is a more collaborative approach, where each of the services has a specific role in the accomplishment of the business process. Eventually, orchestration produces an executable process, which can be run by an orchestration engine, while choreography produces an abstract business protocol that cannot be executed, but only contains the specification of the publicly available messages exchanged between the services.
 
 \paragraph{The problem}
-Today, many of these services, which can be later interconnected, need to run on portable devices, for which calculation power, available memory and consumption are well known issues. In fact, the composition and orchestration/choreography of a business process is a heavy task, and the majority of workflow engines are made to be run on powerful machines both in terms of computation and memory footprint. Moreover the deployment of a business process usually requires to know a priori the number of participant devices, and, above all, it requires them to have installed network protocols and tools that are not always included in the typical software package of a mobile device. 
+Many of these services, which can be later interconnected, need to run on portable devices, for which calculation power, available memory and consumption are well known issues. In fact, the composition and orchestration/choreography of a business process is a heavy task, and the majority of workflow engines are made to be run on powerful machines both in terms of computation and memory footprint. Moreover, the deployment of a business process usually requires to know a priori the number of participant devices, and, above all, it requires them to have installed network protocols and tools that are not always included in the typical software package of a mobile device. 
 Nonetheless, many business processes are already available written in the de facto standard language for web services orchestration: BPEL (Business Process Execution Language). Although there have been attempts to create light and with low memory footprint engines (\cite{bpelMobileEngineMora,bpelMobileEngineHackmann06sliver:a}), the execution of a BPEL process on a small, portable device, is yet to be convenient.
 
 In opposition, in the last years, other technologies have widely spread and have been optimized for the mobile devices world. One as such is surely Java, which has gained ground thanks to its portability, that completely abstracts the software from the hardware. This makes it easy for software companies to produce reusable software, independently of the device architecture. Moreover, ease of use, the huge amount of available libraries and the large user community, surely play in favor of Java language. 
 %There are other approaches used to compose and coordinate services (namely, to create a business process), there are RPC and JAVA RMI.
 
 \paragraph{Objective}
-Given the widespread presence over the web of BPEL for service-oriented applications implementation, we analyze the possibility of automatically transform a BPEL written process in a Java executable routine, with minimum ad-hoc developer's intervention.
+Given the widespread presence over the web of BPEL for service-oriented applications implementation, we analyze the possibility of automatically transforming a BPEL written process in a Java executable routine, with minimum ad-hoc developer's intervention.
 Our objective is then to show the feasibility of a semi-automated transformation from a small business process orchestrated with BPEL to the well known and wide spread over mobile devices, Java language. 
 
 
